Fix workflow location and update contact info

--- a/contact.html
+++ b/contact.html
@@ -1,66 +1,69 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact • Handmade Crochet</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
-<header>
-  <div class="container topbar">
-    <div class="brand">
-      <b>Handmade Crochet</b>
-      <span>Contact</span>
+  <header>
+    <div class="container topbar">
+      <div class="brand">
+        <b>Handmade Crochet</b>
+        <span>Contact</span>
+      </div>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="shop.html">Shop</a>
+        <a href="contact.html">Contact</a>
+      </nav>
     </div>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="shop.html">Shop</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </div>
-</header>
+  </header>
 
-<main class="container">
-  <div class="section-title">
-    <h2>Contact / Order</h2>
-    <p>All free (WhatsApp, Instagram, email)</p>
-  </div>
-
-  <div class="card">
-    <p style="margin:0;color:var(--muted)">
-      Edit your real contact info below inside this file.
-    </p>
-    <hr />
-    <p><b>WhatsApp:</b> +216 XX XXX XXX</p>
-    <p><b>Instagram:</b> @yourbrand</p>
-    <p><b>Email:</b> your@email.com</p>
-  </div>
-
-  <div class="section-title">
-    <h2>Quick message</h2>
-    <p>Optional (does not send automatically)</p>
-  </div>
-
-  <div class="card">
-    <div class="form">
-      <input placeholder="Your name" />
-      <input placeholder="Your phone / email" />
-      <textarea placeholder="Message (example: I want the whale in blue)"></textarea>
-      <p class="small">This form is only visual. Use WhatsApp/Instagram for real messages.</p>
-      <a class="btn btn-primary" href="https://wa.me/21600000000" target="_blank" rel="noreferrer">Open WhatsApp</a>
+  <main class="container">
+    <div class="section-title">
+      <h2>Contact / Order</h2>
+      <p>All free (sApp, Instagram, email)</p>
     </div>
-  </div>
-</main>
 
-<footer>
-  <div class="container">
-    © <span id="y"></span> Handmade Crochet Store
-  </div>
-</footer>
+    <div class="card">
+      <p style="margin:0;color:var(--muted)">
+        Edit your real contact info below inside this file.
+      </p>
+      <hr />
+      <p><b>WhatsApp:</b> +216 58 234 393</p>
+      <p><b>Instagram:</b> @asma_crochet_art</p>
+      <p><b>Email:</b> [EMAIL_ADDRESS]</p>
+    </div>
 
-<script>
-  document.getElementById("y").textContent = new Date().getFullYear();
-</script>
+    <div class="section-title">
+      <h2>Quick message</h2>
+      <p>Optional (does not send automatically)</p>
+    </div>
+
+    <div class="card">
+      <div class="form">
+        <input placeholder="Your name" />
+        <input placeholder="Your phone / email" />
+        <textarea placeholder="Message (example: I want the whale in blue)"></textarea>
+        <p class="small">This form is only visual. Use WhatsApp/Instagram for real messages.</p>
+        <a class="btn btn-primary" href="https://wa.me/21600000000" target="_blank" rel="noreferrer">Open WhatsApp</a>
+      </div>
+    </div>
+  </main>
+
+  <footer>
+    <div class="container">
+      © <span id="y"></span> Handmade Crochet Store
+    </div>
+  </footer>
+
+  <script>
+    document.getElementById("y").textContent = new Date().getFullYear();
+  </script>
 </body>
+
 </html>
