--- a/index.html
+++ b/index.html
@@ -91,5 +91,6 @@
 <script>
   document.getElementById("y").textContent = new Date().getFullYear();
 </script>
+<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>  
 </body>
 </html>
